# DianPose

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dian/dianpose/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DianPose.cpp  DianPose.h  Dianpose-lib.cpp
app/src/main/cpp/base/: base.h
app/src/main/cpp/detection/: PersonDetection.cpp  PersonDetection.h
app/src/main/cpp/include/MNN/: AutoTime.hpp  ImageProcess.hpp  Tensor.hpp  VCS.h
app/src/main/cpp/pose/: PoseNet.cpp  PoseNet.h  pose_snet.h
app/src/main/cpp/pose_ncnn/: PoseNet.cpp  PoseNet.h  snet.id.h
app/src/main/java/com/dian/Activity/: MainActivity.java
app/src/main/java/com/dian/Fragment/: Camera2BasicFragment.java
app/src/main/java/com/dian/Util/: ImageUtil.java  OrientationUtil.java
app/src/main/java/com/dian/View/: AutoFitTextureView.java
app/src/main/java/com/dian/dianpose/: PersonInfo.java  PoseTracking.java
app/src/main/res/layout/: activity_main.xml  fragment_camera2_basic.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dian/dianpose/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
